--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
+    "lodash": "^4.17.21",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
