--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-hook-form": "^7.12.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.3"
   }
 }
