--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@sendgrid/mail": "^7.4.7",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
