--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@apollo/client": "^3.4.5",
     "@apollo/react-hooks": "^4.0.0",
     "@auth0/nextjs-auth0": "^1.5.0",
+    "@aws-sdk/client-s3": "^3.36.1",
     "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@sendgrid/mail": "^7.4.7",
+    "apollo-link-ws": "^1.0.20",
+    "aws-sdk": "^2.1005.0",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.12.2"
+    "react-hook-form": "^7.12.2",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "eslint": "7.32.0",
