--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,11 +18,13 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@sendgrid/mail": "^7.4.7",
+    "@types/mercadopago": "^1.5.5",
     "apollo-link-ws": "^1.0.20",
     "aws-sdk": "^2.1005.0",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
+    "mercadopago": "^1.5.8",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
