--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mercadopago": "^1.5.8",
     "next": "^11.1.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "subscriptions-transport-ws": "^0.9.19"
