--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
+    "react-responsive-carousel": "^3.2.22",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
